--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h1>스마트폰 센서 정보</h1>
+  <h1>컴퓨터의 이해</h1>
   <p><strong>소속 학과:</strong> 컴퓨터과학과</p>
   <p><strong>이름:</strong> 최지원</p>
   <p><strong>학번:</strong> 202534-361405</p>
