--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p><strong>소속 학과:</strong> 컴퓨터과학과</p>
   <p><strong>이름:</strong> 최지원</p>
   <p><strong>학번:</strong> 202534-361405</p>
-  <p><strong>선택 센서:</strong></p>
+  <p><strong>(가)에서 선택한 센서:</strong></p>
   <ul>
     <li>가속도 센서</li>
     <li>자이로스코프 센서</li>
